LA-74 - Spellig Mistake / Fixed Footer Overlap issue

--- a/resources/assets/sass/main.scss
+++ b/resources/assets/sass/main.scss
@@ -1,7 +1,10 @@
 // Variables
     
     @import 'variables';
-
+html,body{
+    min-height: 100%;
+    height: 100%;
+}
 html {
     position: relative;
     min-height: 100%
@@ -9,6 +12,8 @@ html {
 
 body {
     background: #fff;
+    display: flex;
+    flex-direction: column;
 }
 
 b, strong {
@@ -928,6 +933,9 @@ footer{
     padding-top: 20px;
     min-height: 250px;
     width: 100%;
+    clear: both;
+    flex: 0 0 auto;
+    margin-top: auto;
     ul{
       padding: 0;
       li{
